--- a/phase1Project/bio/bio.html
+++ b/phase1Project/bio/bio.html
@@ -15,15 +15,16 @@
   <body>
     <header>
       <h1 id="name">Carl Spackler</h1>
-      <br>
+      <br />
       <img src="carl-spackler.jpg" alt="Carl Spackler" class="profile-img" />
       <p>
         <a
           href="https://www.charactour.com/hub/characters/view/Carl-Spackler.Caddyshack"
           target="_blank"
-          >Charater Tour</a>
-          <br>
-        
+          >Charater Tour</a
+        >
+        <br />
+
         <a
           href="https://www.imdb.com/title/tt0080487/characters/nm0000195"
           target="_blank"
@@ -32,22 +33,48 @@
       </p>
     </header>
     <section class="bio">
+      <div class="bio-content">
       <h2>About Carl:</h2>
-      <p class="carl-desc" id="blue">
-        Living… in the greenskeeper garage of  Bushwood Country Club. Carl lives in squalor, which he attributes to “credit trouble.” Junk is strewn everywhere. The golfer Ty Webb tells him the place is “really awful.” But a home is a home, and Carl is content. He rarely leaves the confines of Bushwood.
-      </p>
-      <p class="carl-desc" id="black">
-        Profession… assistant greenskeeper at Bushwood. Carl reckons he’ll replace his boss, Sandy McFiddish, as head greenskeeper in six years time. His duties include changing the hole locations and donning a hazmat suit to disinfect the Bushwood pool when necessary. He typically works alone but occasionally hang with the caddies. He was a caddy himself once – on a course in the Himalayas, where he once caddied for the Dalai Lama. 
-      </p>
+      <div class="para">
+        <p class="carl-desc" id="blue">
+          Living… in the greenskeeper garage of Bushwood Country Club. Carl
+          lives in squalor, which he attributes to “credit trouble.” Junk is
+          strewn everywhere. The golfer Ty Webb tells him the place is “really
+          awful.” But a home is a home, and Carl is content. He rarely leaves
+          the confines of Bushwood.
+        </p>
+        <p class="carl-desc" id="black">
+          Profession… assistant greenskeeper at Bushwood. Carl reckons he’ll
+          replace his boss, Sandy McFiddish, as head greenskeeper in six years
+          time. His duties include changing the hole locations and donning a
+          hazmat suit to disinfect the Bushwood pool when necessary. He
+          typically works alone but occasionally hang with the caddies. He was a
+          caddy himself once – on a course in the Himalayas, where he once
+          caddied for the Dalai Lama.
+        </p>
 
-      <p class="carl-desc" id="blue">
-        Interests… golf. Carl dreams of one day of becoming a “Cinderella story” and winning the Masters. Until then, he breeds grass hybrids in his spare time. He describes one such breed: “You can play 36 holes on it in the afternoon, take it home and just get stoned to the bejeezus-belt at night on this stuff.”
-      </p>
+        <p class="carl-desc" id="blue">
+          Interests… golf. Carl dreams of one day of becoming a “Cinderella
+          story” and winning the Masters. Until then, he breeds grass hybrids in
+          his spare time. He describes one such breed: “You can play 36 holes on
+          it in the afternoon, take it home and just get stoned to the
+          bejeezus-belt at night on this stuff.”
+        </p>
 
-      <p class="carl-desc"id="black">
-        Personality… eccentric loner. Carl often talks to himself, out the side of his mouth. It is unclear if he talks to himself because he is usually alone, or if he is usually alone because he talks to himself. He misquotes Sartre. Though usually a horrible employee, he takes his gopher-eradication mission to heart; it becomes his singular obsession. He is Ahab, the gopher is his white whale, and he will defeat it all costs. Or fail.
+        <p class="carl-desc" id="black">
+          Personality… eccentric loner. Carl often talks to himself, out the
+          side of his mouth. It is unclear if he talks to himself because he is
+          usually alone, or if he is usually alone because he talks to himself.
+          He misquotes Sartre. Though usually a horrible employee, he takes his
+          gopher-eradication mission to heart; it becomes his singular
+          obsession. He is Ahab, the gopher is his white whale, and he will
+          defeat it all costs. Or fail.
+        </p>
+      </div>
+    </div>
     </section>
     <section class="projects">
+      <div class="bio-content">
       <h2>Projects:</h2>
       <ul class="project-list">
         <li>
@@ -62,14 +89,15 @@
           <a href="https://en.wikipedia.org/wiki/Caddyshack">Pest Control</a>
         </li>
       </ul>
+    </div>
     </section>
     <footer class="footer mt-auto py-3 contact">
-        <div class="container">
-        <p>Contact Carl at: 
-            <a href="mailto:todd.keene@libertymutual.com">example@gmail.com</a>
+      <div class="container">
+        <p class="contact-title">
+          Contact Carl at:
+          <a href="mailto:todd.keene@libertymutual.com">example@gmail.com</a>
         </p>
-    </div>
-     
+      </div>
     </footer>
 
     <script
